Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42982

QWebSocket::close with closeCode and reason doesn't work

XMLWordPrintable

    • 5f8093e6f985a7a887ffaa1e2fecd7314b5444c6

      Closing QWebSocket with closeCode and reason doesn't work, the closeCode is always CloseCodeNormal and the reason is always "". Tested with EchoServer and EchoClient.

        For Gerrit Dashboard: QTBUG-42982
        # Subject Branch Project Status CR V

            frederik Frederik Gladhorn
            kehayryn Keijo Hayrynen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes