QWebSocket should remember close code and reason

Task-number: QTBUG-42982
Change-Id: I50dbff96d7d64a5213e6ea6ba7bb9429b21b1fb2
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@theqtcompany.com>